--- a/Top Agents/topagent.html
+++ b/Top Agents/topagent.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AM Website</title>
+        <!--CUSTOM CSS-->
+        <link rel="stylesheet" href="topagent.css">
+        <!--FONTAWESOME CSS-->
+        <link rel="stylesheet" href="all.min.css">
     </head>
     <body>
         
