--- a/Top Agents/topagent.html
+++ b/Top Agents/topagent.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="all.min.css">
     </head>
     <body>
-        
+    <!--FONTAWESOME JS-->
+    <script src="all.min.js"></script>    
     </body>
     </html>
