--- a/Top Agents/topagent.html
+++ b/Top Agents/topagent.html
@@ -10,6 +10,14 @@
         <link rel="stylesheet" href="all.min.css">
     </head>
     <body>
+        <div class="container">
+            <div class="text">
+                <h1>YOGA TRAINER TEAM</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero hic tempore repellendus. Amet reprehenderit est libero eos rem, porro recusandae nostrum nisi. Aut deleniti repellat reiciendis corrupti ipsam placeat velit.
+                </p>
+            </div>
+        </div>
         
 
 
