--- a/Top Agents/topagent.html
+++ b/Top Agents/topagent.html
@@ -29,6 +29,18 @@
                     </div>
                     <img src="unnamed.png">
                 </div>
+                <div class="card">
+                    <div class="card-text">
+                        <h3>John Deon</h3>
+                        <span>Yoga trainer</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+
+                        </p>
+
+                    </div>
+                    <img src="unnamed.png">
+                </div>
+                
             </div>
         </div>
         
