--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -34,6 +34,7 @@
         </div>
     	</a>
     	
+    	<a href="Catgry/categories/Anciant%20Cites/table.html">
         <div class="card">
             <div class="card-image2"></div>
             <div class="card-text">
@@ -56,6 +57,8 @@
                 </div>
             </div>
         </div>
+    </a>
+    
         <div class="card">
             <div class="card-image3"></div>
             <div class="card-text">
