--- a/home/about us/plan your trip.html
+++ b/home/about us/plan your trip.html
@@ -45,9 +45,23 @@
 		width: 125px;
 		color: white;
 		font-size: 18px;
-		font-size: 16px;
+		font-weight: 700px;
 
 	}
+
+    .firstname{
+        position: relative;
+        left: 417px;
+        top:-80px;
+        line-height: 40px;
+        border-radius:6px;
+        padding: 0 22px;
+        font-size: 16px;
+        color: #555; 
+    }
+
+    .l
+
 </style>
 </head>
 <body>
